# algo_trade

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  unittesting.yml
TradeLens/: db.sqlite3
TradeLens/TradeLens/: asgi.py  settings.py  wsgi.py
TradeLens/playground/: urls.py
TradeLens/templates/: base.html  dashboard.html
algo_trade/: Testing File.py  __main__.py  _constants.py  _enums.py  _utils.py  account.py  contract.py  dyn_opt.py  dyn_opt_investigation.py  future.py  implementations.py  instrument.py  main.py  pnl.py  portfolio.py  risk_limits.py  risk_limits_95th_percentile.py  risk_logging.py  risk_measures.py  risk_measures_tests.py  rules.py  strategy.py  trading_indicators.py  trading_system.py  update_account.py
algo_trade/data_engine/: app.py  base.py  future.py  main.py  manager.py  pipeline.py  portfolio.py  risk_measures.py  sql_utils.py  std_daily_price.py  strategy.py  transformation.py
algo_trade/ib_gateway/: Dockerfile.ib-gateway  README.md  config.ini.template
algo_trade/ib_utils/: _contract.py  _enums.py  _tag_value.py  _type_hints.py  account.py  api_handler.py  error_codes.py  trading_algorithm.py  update_portfolio.py  validate_instruments.py
dashboard/: main.py
data/: contract.csv  instruments.csv
tests/: contract_tests.py  test_contract.py  test_contract_norgate.py  test_dyn_opt.py  test_future.py  test_future_norgate.py  test_instrument.py  test_pnl.py  test_risk_limits.py  test_risk_measure.py  test_rules.py  test_strategy.py  utils.py
web/: app.py  dashboard.html
(+299 files in other folders)
