[tool.poetry]
name = "algo-trade"
version = "0.1.0"
description = ""
authors = ["Cole Rottenberg <Cole.rottenberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databento = "^0.38.0"
pandas = "^2.2.2"
scipy = "^1.14.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
toml = "^0.10.2"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

black = "^24.4.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
algo-trade = "algo_trade.main:main"
# Path Agnostic

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
